--- a/pollPage.html
+++ b/pollPage.html
@@ -123,9 +123,9 @@
                      style="width:100px ; height:100px"/>
             </div>
             <br/>
-            <a href="showProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
+            <a href="PatronMainPage.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
             <br/>
-            <a class="rightMenuColor" onclick="myFunction('shops')">
+            <a href="#" class="rightMenuColor" onclick="myFunction('shops')">
                 <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
                 &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
             </a>
@@ -268,7 +268,7 @@
                     const attrClass = document.createAttribute("class");
                     attrClass.value = "rightMenuColor";
                     const attrHref = document.createAttribute("href");
-                    attrHref.value = "showShop.html";
+                    attrHref.value = "showShopPatron.html";
                     const attrId = document.createAttribute("id");
                     attrId.value = val.id;
                     a.setAttributeNode(attrClass);
@@ -308,42 +308,6 @@
                     $("#poll-form-submit-btn").attr("disabled", "disabled");
                 else {
                     $("#poll-form-submit-btn").removeAttr("disabled");
-                }
-            });
-
-            /*
-             Request for logout
-             send authorization in header
-             */
-            $("#logout").click(function () {
-                var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
-                if (logout_var ==true){
-                    $.get("address.txt", function (data) {
-                        const my_address = data + "/salesman/logout/";
-                        $.ajax({
-                            type: 'POST',
-                            dataType: 'json',
-                            contentType: 'application/json',
-                            url: my_address,
-                            headers:{
-                                'Authorization' : window.sessionStorage.token
-                            },
-                            data: JSON.stringify({}),
-                            success: function (resultData, status, xhr) {
-                                alert(resultData.message);
-                                if (resultData.result.toString() === "true") {
-                                    window.location.href="HomePage.html";
-                                }
-                            },
-                            error: function () {
-                                alert(" اتصال به اینترنت برقرار نیست. ");
-                            }
-                        })
-
-                    });
-
-                }else{
-                    alert(" از این که همراه ما خواهید بود متشکریم. ");
                 }
             });
 
@@ -411,6 +375,43 @@
 
                 });
 
+            });
+
+
+            /*
+              Request for logout
+              send authorization in header
+              */
+            $("#logout").click(function () {
+                var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
+                if (logout_var ==true){
+                    $.get("address.txt", function (data) {
+                        const my_address = data + "/salesman/logout/";
+                        $.ajax({
+                            type: 'POST',
+                            dataType: 'json',
+                            contentType: 'application/json',
+                            url: my_address,
+                            headers:{
+                                'Authorization' : window.sessionStorage.token
+                            },
+                            data: JSON.stringify({}),
+                            success: function (resultData, status, xhr) {
+                                alert(resultData.message);
+                                if (resultData.result.toString() === "true") {
+                                    window.location.href="HomePage.html";
+                                }
+                            },
+                            error: function () {
+                                alert(" اتصال به اینترنت برقرار نیست. ");
+                            }
+                        })
+
+                    });
+
+                }else{
+                    alert(" از این که همراه ما خواهید بود متشکریم. ");
+                }
             });
 
 
