--- a/PatronMainPage.html
+++ b/PatronMainPage.html
@@ -70,9 +70,9 @@
                  style="width:100px ; height:100px"/>
         </div>
         <br/>
-        <a href="showProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
+        <a href="PatronMainPage.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
         <br/>
-        <a class="rightMenuColor" onclick="myFunction('shops')">
+        <a href="#" class="rightMenuColor" onclick="myFunction('shops')">
             <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
             &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
         </a>
@@ -170,7 +170,7 @@
                 const attrClass = document.createAttribute("class");
                 attrClass.value = "rightMenuColor";
                 const attrHref = document.createAttribute("href");
-                attrHref.value = "showShop.html";
+                attrHref.value = "showShopPatron.html";
                 const attrId = document.createAttribute("id");
                 attrId.value = val.id;
                 a.setAttributeNode(attrClass);
