--- a/addPoll.html
+++ b/addPoll.html
@@ -182,7 +182,7 @@
         </div>
         <div class="col-lg-offset-2">
             <div class="w3-border w3-border-light-gray w3-card-12 w3-padding componentColor">
-                <form class="form-horizontal" id="poll-form">
+                <form class="form-horizontal" id="poll-form" novalidate>
 
                     <div class="form-group">
                             <div class="col-md-11">
@@ -200,7 +200,7 @@
                     <div class="form-group">
                         <div class="col-md-11">
 
-                            <input type="range" required name="percent" min="0" max="100" step="10" value="10"
+                            <input type="range" required name="importance" min="0" max="100" step="10" value="10"
                                    class="form-control w3-margin"
                                    id="poll-form-importance-inp" accept="application/txt" onchange="show_value(this.value);" />
                             <label> درصد اهمیت    </label>
@@ -212,7 +212,7 @@
                     <div class="form-group">
                         <div class="col-md-11">
                             <!--                                  تعویض تاریخ-->
-                            <input type="date" required autofocus value="" name="timeout"
+                            <input type="date" required autofocus value="" name="expireDate"
                                    class="form-control w3-margin pictureInput"
                                    id="poll-form-timeout-inp" accept="application/txt">
                             <label class="pictureInput"> مهلت </label>
@@ -252,13 +252,13 @@
                         <!--this htlm should be copy in next div when the + bottom is clicked-->
                         <div class="col-md-11" id="cloneChoice">
                             <span style="margin-top:20px ; direction:rtl">
-                                <input type="text" required autofocus name="choice0" value="" class="form-control w3-center w3-margin" id="poll-form-choice0-inp"
+                                <input type="text" required autofocus name="choice" value="" class="form-control w3-center w3-margin" id="poll-form-choice-inp"
                                        accept="application/txt" />
                                 <label> گزینه </label>
                             </span>
                         </div>
-                        <div class="col-md-2" id="addChoice">
-                            <button style="margin:20px" class="btn btn-default btnColors" data-action="add" onclick="addChoice()"><i class="fa fa-plus"><strong style="text-align:center;font-style:normal!important">+</strong></i></button>
+                        <div class="col-md-2" id="addChoice" onclick="addChoice()">
+                            <button style="margin:20px" class="btn btn-default btnColors" ><i class="fa fa-plus"><strong style="text-align:center;font-style:normal!important">+</strong></i></button>
                         </div>
                     </div>
                     <!-- for next div we should add  style="display:none;"  -->
@@ -400,43 +400,46 @@
         $(document).ready(function () {
             const poll_form_var = document.getElementById("poll-form");
             $("#poll-form-kind-inp").change(function () {
-                if(poll_form_var.kind.value == "LinearScalePoll"){
-                    document.getElementById("LinearScale").style.display="block";
-                    document.getElementById("choices").style.display="none";
-                }
-                else if((poll_form_var.kind.value == "MultipleChoicePoll")||(poll_form_var.kind.value == "CheckBoxPoll")) {
-                    document.getElementById("LinearScale").style.display="none";
-                    document.getElementById("choices").style.display="block";
+                if (poll_form_var.kind.value == "LinearScalePoll") {
+                    document.getElementById("LinearScale").style.display = "block";
+                    document.getElementById("choices").style.display = "none";
+                } else if (poll_form_var.kind.value == "MultipleChoicePoll") {
+                    document.getElementById("LinearScale").style.display = "none";
+                    document.getElementById("choices").style.display = "block";
+                } else if (poll_form_var.kind.value == "CheckBoxPoll") {
+                    document.getElementById("LinearScale").style.display = "none";
+                    document.getElementById("choices").style.display = "block";
+                } else {
+                    document.getElementById("LinearScale").style.display = "none";
+                    document.getElementById("choices").style.display = "none";
                 }
             });
 
         });
 
-        var idTxt = 1;
+
+        /*
+        Function to insert one by one choice if they are not empty
+         */
         function addChoice() {
 
-
-            if (!($('#poll-form-choice-inp').textContent.empty())) {
+            var $poll_form_choices = $("input[name ='choice']");
+            var empty_test = false;
+            $poll_form_choices.each(function () {
+                if ($(this).val() === '')
+                    empty_test = true;
+            });
+            if (empty_test === false) {
                 $("#cloneChoice").clone().prependTo("#addChoice");
-
+                var $poll_form_choices1 = $("input[name ='choice']");
+                // $poll_form_choices1[($poll_form_choices1.length)-1].removeAttribute("value");
+                $poll_form_choices1[($poll_form_choices1.length) - 1].value = "";
             }
-            // var newChoice = $('#cloneChoice').html();
-            // var newDiv = $("<div>");
-            // newDiv.html(newChoice);
-            // const addChoice = document.getElementById("addChoice");
-            // addChoice.insertBefore(newDiv);
-            // var newChild = document.querySelector('#poll-form-choice0-inp');
-            // newChild.removeAttribute("name");
-            // newChild.removeAttribute("id");
-            // newChild.setAttribute("name", "choice" + idTxt);
-            // newChild.setAttribute("id", "poll-form-choice" + idTxt + "-inp");
-            // idTxt += 1;
+
         }
-    </script>
 
-<script>
 
-        $(document).ready( function () {
+        $(document).ready(function () {
 
             const poll_form_var = document.getElementById("poll-form");
 
@@ -453,7 +456,7 @@
                     const lastOp = document.getElementById("poll-form-shopKinds-lastOp-op");
                     op.value = val.id;
                     op.appendChild(opText);
-                    myShops.insertBefore(op,lastOp);
+                    myShops.insertBefore(op, lastOp);
                 }
             }
 
@@ -461,9 +464,40 @@
             $("#poll-form").submit(function (e) {
                 e.preventDefault();
 
+                const shop_var = poll_form_var.shops.value;
+                const type_var = poll_form_var.kind.value;
+                const importance_var = poll_form_var.importance.value;
+                const expireDate_var = poll_form_var.expireDate.value;
+                const text_var = poll_form_var.question.value;
+                const start_var = poll_form_var.start.value;
+                const step_var = poll_form_var.step.value;
+                const choicesCount_var = poll_form_var.choicesCount.value;
+                var answerTexts_var = "";
+                var $poll_form_choices2 = $("input[name ='choice']");
+                for (var i=0 ; i<($poll_form_choices2.length)-1 ; i++){
+                    answerTexts_var = answerTexts_var.concat($poll_form_choices2[i].value);
+                    answerTexts_var = answerTexts_var.concat(",");
+                }
+                answerTexts_var = answerTexts_var.concat($poll_form_choices2[i].value);
+                //alert
+
+
                 var poll_formData = new FormData();
-                poll_formData.append("phone_number", poll_form_var.phoneNumber.value);
-                poll_formData.append("shop", poll_form_var.shops.value);
+                poll_formData.append("shop", shop_var);
+                poll_formData.append("type_poll", type_var);
+                poll_formData.append("importance", importance_var/10);
+                poll_formData.append("expire_date", expireDate_var);
+                poll_formData.append("text", text_var);
+
+                if (poll_form_var.kind.value == "LinearScalePoll") {
+                    poll_formData.append("start", start_var);
+                    poll_formData.append("step", step_var);
+                    poll_formData.append("choices_count", choicesCount_var);
+                } else if (poll_form_var.kind.value == "MultipleChoicePoll") {
+                    poll_formData.append("answer_texts", answerTexts_var);
+                } else if (poll_form_var.kind.value == "CheckBoxPoll") {
+                    poll_formData.append("answer_texts", answerTexts_var);
+                }
 
                 $.get("address.txt", function (data) {
 
@@ -480,7 +514,7 @@
                             'Authorization': window.sessionStorage.token
                         },
                         data: poll_formData,
-                        success: function(resultData, status, xhr){
+                        success: function (resultData, status, xhr) {
                             alert(resultData.message);
                             if (resultData.result.toString() === "true") {
                                 // window.location.href="advertisementPage.html";
@@ -488,7 +522,8 @@
                             }
                         },
                         error: function () {
-                            alert(" اتصال به اینترنت برقرار نیست. ");}
+                            alert(" اتصال به اینترنت برقرار نیست. ");
+                        }
                     })
 
                 });
@@ -501,7 +536,7 @@
            */
             $("#logout").click(function () {
                 var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
-                if (logout_var ==true){
+                if (logout_var == true) {
                     $.get("address.txt", function (data) {
                         const my_address = data + "/salesman/logout/";
                         $.ajax({
@@ -509,14 +544,14 @@
                             dataType: 'json',
                             contentType: 'application/json',
                             url: my_address,
-                            headers:{
-                                'Authorization' : window.sessionStorage.token
+                            headers: {
+                                'Authorization': window.sessionStorage.token
                             },
                             data: JSON.stringify({}),
                             success: function (resultData, status, xhr) {
                                 alert(resultData.message);
                                 if (resultData.result.toString() === "true") {
-                                    window.location.href="HomePage.html";
+                                    window.location.href = "HomePage.html";
                                 }
                             },
                             error: function () {
@@ -526,7 +561,7 @@
 
                     });
 
-                }else{
+                } else {
                     alert(" از این که همراه ما خواهید بود متشکریم. ");
                 }
             });
